--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <!--  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
     <!-- header section -->
@@ -170,6 +172,37 @@
     <!-- Deals & Discounts section End -->
 
 
+<!-- footer section -->
+      
+<footer>
+    <div class="main-footer-nav">
+        
+        <div class="footer-container-1">
+           <img src="Images/Group 40071 (2).png" alt="">
+            <h2>Hero <span class="prime-color">Travel</span></h2>
+        </div>
+
+        <div class="footer-description">
+            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+        </div>
+
+      <div class="footer-container-2">
+        <div class="social-icons">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+        </div>
+    </div>
+    <div class="horizontal-line">
+        <hr>
+    </div>
+  
+        <div class="footer-bottom">
+            <p class="footer-title">2017, All Rights Reserved. </p>
+        </div>
+</footer>
+<!-- footer section end -->
 </body>
 </html>
 
