--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         
         <div class="footer-container-1">
            <img src="Images/Group 40071 (2).png" alt="">
-            <h2>Hero <span class="prime-color">Travel</span></h2>
+            <h2>Hero <span class="travel-color">Travel</span></h2>
         </div>
 
         <div class="footer-description">
@@ -205,7 +205,7 @@
 <!-- footer section end -->
 </body>
 </html>
-
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -222,4 +222,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
