last time commit

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
         <section class="container1">
             <div class="c1-text-sec">
                 <h2 class="c1-title">Explore Your Travel</h2>
-                <p class="c1-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro asperiores qui accusantium, Lorem ipsum dolor sit amet.</p>
+                <p class="c1-desc">It seems you're looking for information about travel websites. There are various types of travel websites, each serving different purposes.</p>
             </div>
             <div class="explor-sec">
                 <form action="">
                     <input class="t-input" type="text" name="" id="" placeholder="Where go"> <br>
                     <select class="t-select" required>
                         <option value="">When</option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option value="">Bangla</option>
+                        <option value="">English</option>
+                        <option value="">Math</option>
                     </select> <br>
                     <select class="t-select-2" required>
                         <option value="">Select Type</option>
+                        <option value="">Web Design</option>
+                        <option value="">Graphic Design</option>
                         <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                       
                     </select> <br>
                     <button class="banner-button"><i class="fa-solid fa-magnifying-glass"></i>Find out</button>
                     
@@ -66,20 +67,20 @@
             <div class="banner-3-container">
                 <h2 class="banner-3-title">Our Popular Tours</h2>
                 <p class="banner-3-desc">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem optio qui, veritatis sed unde facere?
+                    Certainly, if you're looking to create content for a website that promotes popular tours.
                 </p>
                 <ul class="main-nav">
                     <li>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste quasi aperiam quis totam veniam ex.</p> <br> 
+                        <p> Discover our handpicked selection of popular tours that promise unforgettable experiences and lifelong memories.</p> <br> 
                     </li>
                     <li>
-                        <p>Esse molestias voluptatum non neque vel minus eveniet, quae adipisci delectus rem fuga, blanditiis sapiente.</p> <br>
+                        <p>Explore our curated collection of popular tours around the globe.</p> <br>
                     </li>
                     <li>
-                        <p>Perspiciatis exercitationem minima consequuntur illum neque, dolor iste sit in mollitia quibusdam magnam corporis eaque.</p> <br>
+                        <p>We pride ourselves on offering meticulously planned tours, expert guides, and a commitment to providing the best travel experiences."</p> <br>
                     </li>
                 </ul>
-                <p class="banner-3-desc1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, eveniet architecto ad quos autem quisquam culpa odit rerum ea cumque?</p>
+                <p class="banner-3-desc1">Feel free to customize these ideas based on the specific focus and style of your website. Highlighting the unique aspects of your tours and providing valuable information will help attract potential travelers.</p>
                 <button class="btn-primary">Read More</button>
             </div>
 
@@ -102,7 +103,8 @@
     <div class="destination-section">
         <div class="destination-description">
             <h2>Choose Your Destination</h2>
-            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <p>
+                Certainly, crafting text for a "Choose Your Destination" section on a travel website involves enticing language that sparks curiosity and promotes exploration. Here's a sample:</p>
         </div>
 
         <div class="destination-section-img">
